--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ Description:
 Author: Mustra-designs (Ivan Ružević)
 Author URI: www.mustra-designs.com
 Help: stylish.mustra-designs.com
-Version: 3.4
+Version: 3.4.1
 */
 /* Compass Framework Import */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
@@ -199,12 +199,12 @@ table.word_break td {
   font-style: normal;
   font-weight: normal;
   src: url("../fonts/stylish.eot");
-  src: url("../fonts/stylish.eot?iefix") format("embedded-opentype"), url("../fonts/stylish.svg#stylish") format("svg"), url("../fonts/stylish.woff") format("woff"), url("../fonts/stylish.ttf") format("truetype");
+  src: url("../fonts/stylish.eot?iefix") format("eot"), url("../fonts/stylish.svg#stylish") format("svg"), url("../fonts/stylish.woff") format("woff"), url("../fonts/stylish.ttf") format("truetype");
 }
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
   @font-face {
     font-family: "stylish";
-    src: url("../fonts/stylish.svg") format("svg");
+    src: url("../fonts/stylish.svg#stylish") format("svg");
     font-style: normal;
     font-weight: normal;
   }
@@ -3903,12 +3903,12 @@ table th.last, table td.last {
   font-style: normal;
   font-weight: normal;
   src: url("../fonts/fontawesome.eot");
-  src: url("../fonts/fontawesome.eot?iefix") format("embedded-opentype"), url("../fonts/fontawesome.svg#FontAwesome") format("svg"), url("../fonts/fontawesome.woff2") format("woff2"), url("../fonts/fontawesome.woff") format("woff"), url("../fonts/fontawesome.ttf") format("truetype");
+  src: url("../fonts/fontawesome.eot?iefix") format("eot"), url("../fonts/fontawesome.svg#FontAwesome") format("svg"), url("../fonts/fontawesome.woff2") format("woff2"), url("../fonts/fontawesome.woff") format("woff"), url("../fonts/fontawesome.ttf") format("truetype");
 }
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
   @font-face {
     font-family: "FontAwesome";
-    src: url("../fonts/fontawesome.svg") format("svg");
+    src: url("../fonts/fontawesome.svg#FontAwesome") format("svg");
     font-style: normal;
     font-weight: normal;
   }
